# Flow-Library-Fullstack-app

./: LICENSE  README.md  runserver.bat
flow_library_client/: README.md  package-lock.json  package.json  vue-run.bat
flow_library_client/public/: index.html
flow_library_client/src/: App.vue  main.js
flow_library_client/src/components/: BookCard.vue  BookCards.vue  BookInfo.vue  BookTag.vue  BookTagsList.vue  ErrorNotFound.vue  SearchField.vue  TheFooter.vue  TheHeader.vue  TheLoading.vue
flow_library_client/src/pages/: BookInfoPage.vue  BooksCardsPage.vue  MainPage.vue
flow_library_client/src/router/: router.js
flow_library_server/: django-run.bat  manage.py  pyproject.toml
flow_library_server/book/: admin.py  models.py  serializers.py  views.py
flow_library_server/book/migrations/: 0001_initial.py  0002_book_file.py  0003_tag_book_tags.py
flow_library_server/fixtures/: author.json  book.json  db.json  genre.json  publisher.json  tag.json
flow_library_server/flow_library_server/: asgi.py  settings.py  urls.py  wsgi.py
